--- a/src/css/blog/_header.scss
+++ b/src/css/blog/_header.scss
@@ -1,98 +1,97 @@
-        .header{
-            width:100vw;
-            height: 600px;
-            color: #fff;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            justify-content: center;
-            z-index: 50;
+.header {
+  width: 100vw;
+  height: 600px;
+  color: #fff;
+  margin:5vh 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  justify-content: center;
+  z-index: 50;
 
-            h1{
-                font-size: 3rem;
-                margin: 0px auto;
-                position: relative;
-                color: $secondary-blue;
-                grid-area: 2/1;
-                z-index: 100;
-                b{
-                    color: $orange;
-                }
-            }
-            &__slogan{
-                font-size: 1.5rem;
-                margin: 90px auto;
-                position: relative;
-                color: #fff;
-                grid-area: 2/1;
-                z-index: 100;
-            }            
-           .buttons{
-               z-index: 100;
-               height: 100px;
-               width: 500px;
-               grid-area: 3/1;
-               margin: 0 auto 150px auto;
-               display: flex;
-               flex-direction: row;
-               justify-content: space-around;
-            //    padding: 1rem;
+  h1 {
+    font-size: 3rem;
+    margin: 0px auto;
+    position: relative;
+    color: $secondary-blue;
+    grid-area: 2/1;
+    z-index: 100;
+    b {
+      color: $orange;
+    }
+  }
+  &__slogan {
+    font-size: 1.5rem;
+    margin: 90px auto;
+    position: relative;
+    color: #fff;
+    grid-area: 2/1;
+    z-index: 100;
+  }
+  .buttons {
+    z-index: 100;
+    height: 100px;
+    width: 500px;
+    grid-area: 3/1;
+    margin: 0 auto 150px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    //    padding: 1rem;
 
-            .btn1{
-                margin-right:30px;
-            }
-           }
-        .homepage-hero-module {
-            border-right: none;
-            border-left: none;
-            position: absolute;
-            width: 100vw;
-            height: 400px;
-        }
+    .btn1 {
+      margin-right: 30px;
+    }
+  }
+  .homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: absolute;
+    width: 100vw;
+    height: 400px;
+  }
 
-        .no-video .video-container video,
-        .touch .video-container video {
-            display: none;
-        }
+  .no-video .video-container video,
+  .touch .video-container video {
+    display: none;
+  }
 
-        .no-video .video-container .poster,
-        .touch .video-container .poster {
-            display: block !important;
-        }
+  .no-video .video-container .poster,
+  .touch .video-container .poster {
+    display: block !important;
+  }
 
-        .video-container {
-            position: relative;
-            bottom: 0%;
-            left: 0%;
-            height: 500px;
-            width: 100%;
-            overflow: hidden;
-            background: #000;
-        }
+  .video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 500px;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+  }
 
-        .video-container .poster img {
-            width: 100%;
-            bottom: 0;
-            position: absolute;
-        }
+  .video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+  }
 
-        .video-container .filter {
-            z-index: 50;
-            position: absolute;
-            background: rgba(58, 54, 54, 0.4);
-            width: 100vw;
-            height: inherit;
-        }
+  .video-container .filter {
+    z-index: 50;
+    position: absolute;
+    background: rgba(58, 54, 54, 0.4);
+    width: 100vw;
+    height: inherit;
+  }
 
-        .video-container video {
-            position: absolute;
-            z-index: 0;
-            bottom: 0;
-        }
+  .video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+  }
 
-        .video-container video.fillWidth {
-            width: 100%;
-        }
-
-        
+  .video-container video.fillWidth {
+    width: 100%;
+  }
 }
