--- a/src/css/blog/_logo.scss
+++ b/src/css/blog/_logo.scss
@@ -1,7 +1,11 @@
 .logo{
-    // width: inherit;
-    height: inherit;
-    padding: .0rem;
+    height: 60px;
+    width: 60px;
+    padding: .5rem;
+    box-shadow: 1px 2px 20px 2px rgb(138, 140, 141);
+    border-radius: 5px;
+    
+
     
     h1{
         padding: .3rem;
