--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -467,10 +467,6 @@
 .shopping__slider {
   width: inherit;
   height: inherit;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (5fr)[3];
-      grid-template-columns: repeat(3, 5fr);
   position: relative;
   overflow: hidden;
   -webkit-transition: all 1s ease-in;
@@ -504,9 +500,6 @@
 }
 
 .shopping__slider__one {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: 1/1;
   background: -webkit-gradient(linear, left top, right top, from(#0689c4), color-stop(rebeccapurple), to(#159dc6));
   background: linear-gradient(to right, #0689c4, rebeccapurple, #159dc6);
   display: -webkit-box;
@@ -557,82 +550,56 @@
 }
 
 .shopping .childTwoHeader {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: 2/3;
   width: 350px;
   height: 150px;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: 1/1;
   padding: 1rem;
-  margin: 5vh auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0vh auto;
 }
 
 .shopping .childTwoHeader h2 {
   font-size: 3rem;
 }
 
-.shopping .phone__cover {
-  background: #aaa8a8;
-  border-radius: 10px;
-  width: inherit;
-  height: inherit;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transform: skewX(-5deg);
-          transform: skewX(-5deg);
-}
-
-.shopping .phone__cover__inner {
-  width: 300px;
-  height: 300px;
-  background: url("../../pics/Shopping Site.jpg") black;
-}
-
-.shopping .phone__cover__btn {
-  width: 30px;
-  height: 30px;
-  border-radius: 50px;
-  border: none;
-  margin-top: 10px;
-  background: grey;
-  -webkit-box-shadow: inset 2px 2px 3px #23343b;
-          box-shadow: inset 2px 2px 3px #23343b;
+.shopping .loveIcon {
+  position: relative;
+  -webkit-animation: expands .2s ease-in-out forwards;
+          animation: expands .2s ease-in-out forwards;
 }
 
 .shopping__art {
   -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: 2/1;
+  grid-area: 2/ span 3;
   padding: 2rem 0;
+  width: 500px;
   position: relative;
   left: -100px;
+  background: #fff;
+  border-radius: 0 40px 40px 0;
 }
 
 .shopping__paragraph {
   -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: 2 / 2;
+  -ms-grid-column: 3;
+  grid-area: 2 / 3;
   padding: 2rem 1rem;
-  height: 350px;
+  height: 450px;
   position: relative;
-  top: 10vh;
+  top: 5vh;
+  right: 200px;
+  margin: 0vh 5vh;
 }
 
 .shopping__button {
-  margin-top: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 200px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -646,13 +613,13 @@
 }
 
 .shopping__button__seemore {
-  width: 100px;
-  height: 50px;
+  width: 200px;
+  height: 70px;
   margin-bottom: 10px;
   cursor: pointer;
   background: none;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   color: #f6d342;
 }
 
@@ -1047,6 +1014,72 @@ body button:focus {
   to {
     top: 0px;
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes expands {
+  10% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  50% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  75% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes expands {
+  10% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  50% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  75% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 /*# sourceMappingURL=main.css.map */
