--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -30,8 +30,8 @@ body {
   animation: moveRight 1s ease forwards infinite;
 }
 .bounce {
-    animation: "bounce 5s ease forwards";
-    transition: "1s ease-in-out forwards"
+  animation: "bounce 5s ease forwards";
+  transition: "1s ease-in-out forwards";
 }
 .feelingDisp {
   animation: feelingDisp 0.5s ease-in forwards;
@@ -115,5 +115,27 @@ body {
   to {
     top: 0px;
     opacity: 1;
+  }
+}
+@keyframes expands {
+  10% {
+    transition: all 1s ease-in-out;
+    transform: scale(1);
+  }
+  25% {
+    transition: all 1s ease-in-out;
+    transform: scale(1.3);
+  }
+  50% {
+    transition: all 1s ease-in-out;
+    transform: scale(1);
+  }
+  75% {
+    transition: all 1s ease-in-out;
+    transform: scale(1.5);
+  }
+  100% {
+    transition: all 1s ease-in-out;
+    transform: scale(1);
   }
 }
