--- a/src/css/blog/_articlepage-header.scss
+++ b/src/css/blog/_articlepage-header.scss
@@ -1,5 +1,29 @@
 .ArticleHeader {
-  color: #fff;
+  // color: #fff;
+  margin: 5vh 0 ;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  background: #fff;
+  // padding: 1rem;
+  // overflow: hidden;
+  // border-radius: 10px;
+  &__heading{
+    grid-area: 1/1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    
+  }
+  h1 {
+    // border: 1px solid #fff;
+    // align-self: center;
+    justify-content: center;
+    font-size: 3rem;
+    width: fit-content;
+    height: fit-content;
+    margin: 0 10vw;
+    text-decoration: underline;
+    text-decoration-color: gold;
+  }
 }
