--- a/src/css/blog/_config.scss
+++ b/src/css/blog/_config.scss
@@ -27,3 +27,13 @@ $secondary: #94a4a5;
     transition: all 0.5s ease;
   }
 }
+
+@mixin flexCon($direction, $centering) {
+  display: flex;
+  flex-direction: $direction;
+  @if ($centering == "true") {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
