--- a/src/css/blog/_logo.scss
+++ b/src/css/blog/_logo.scss
@@ -1,19 +1,16 @@
-.logo{
-    height: 60px;
-    width: 60px;
-    padding: .5rem;
-    box-shadow: 1px 2px 20px 2px rgb(138, 140, 141);
-    border-radius: 5px;
-    
+.logo {
+  height: 60px;
+  width: 60px;
+  padding: 0.5rem;
+  box-shadow: 1px 2px 20px 2px rgb(138, 140, 141);
+  border-radius: 5px;
 
-    
-    h1{
-        padding: .3rem;
-        color: $orange;
-        font-size: 2rem;
-        b{
-            color: $secondary-blue;
-        }
+  h1 {
+    padding: 0.3rem;
+    color: $orange;
+    font-size: 2rem;
+    b {
+      color: $secondary-blue;
     }
-    
+  }
 }
